<resources>
    <string name="app_name" translatable="false">Rick and Morty</string>

    <string name="episodes_title" translatable="false">Episodes</string>
    <string name="error_loading_more">Error in loading</string>
    <string name="retry">Retry</string>
    <string name="nothing_more_to_load">Nothing more to load</string>
    <string name="no_episodes_found">No episodes found</string>
    <string name="never_updated">Never updated</string>
    <string name="last_updated">Last updated: </string>
    <string name="episode">Episode</string>
    <string name="character">Character</string>
    <string name="origin_format">Origin: %1$s</string>
    <string name="appears_in_n_episodes">Appears in %1$d episodes</string>
    <string name="export">Export</string>
...
